# ZQCNN-MTCNN-vs-libfacedetection

./: README.md
NCNN/: CMakeLists.txt
NCNN/MTCNN/: CMakeLists.txt  ZQ_CNN_BBoxUtils.h  ZQ_CNN_MTCNN_ncnn.h  mtcnn.cpp  mtcnn.h
NCNN/examples/: genderage.cpp  mobilefacenet.cpp
NCNN/model/: det1-dw20-fast.ncnnparam  det2-dw24-fast.ncnnbin
NCNN/models/: det2-dw24-fast.param  det3-dw48-fast.param
ZQCNN/: CMakeLists.txt  ZQCNN.sln
ZQCNN/SamplesZQCNN/SampleMTCNN/: SampleMTCNN.cpp
ZQCNN/SamplesZQCNN/SampleMTCNN/x64/Release/SampleMTCNN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SampleMTCNN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libfacedetection/: CMakeLists.txt
libfacedetection/example/: libfacedetectcnn-example.cpp
